--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "source-map-explorer": "^2.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
